<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sergioescalona.dadosyvotacionesapp.Project.Activities.MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:text="@string/text_view_dices_votes"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="32sp" />

    <ImageButton
        android:id="@+id/buttonDice"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/textViewTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:adjustViewBounds="true"
        android:background="@color/colorPrimaryLight"
        android:onClick="goToDice"
        android:scaleType="fitCenter"
        android:src="@drawable/dicesactivity"
        android:text="@string/text_button_dices" />

    <ImageButton
        android:id="@+id/buttonVotes"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignLeft="@+id/buttonDice"
        android:layout_alignStart="@+id/buttonDice"
        android:layout_below="@+id/buttonDice"
        android:layout_marginTop="37dp"
        android:adjustViewBounds="true"
        android:background="@color/colorPrimaryLight"

        android:onClick="goToVote"
        android:scaleType="fitCenter"
        android:src="@drawable/voteactivity"
        android:text="@string/text_button_votes" />


</RelativeLayout>
